2009-04-02  Jian Li  <jianli@chromium.org>

        Reviewed by Darin Fisher.

        Upstream V8WorkerContextObjectEventListener for V8 bindings.
        https://bugs.webkit.org/show_bug.cgi?id=25005

        * bindings/v8/V8WorkerContextObjectEventListener.cpp: Added.
        * bindings/v8/V8WorkerContextObjectEventListener.h: Added.

2009-04-02  Jian Li  <jianli@chromium.org>

        Reviewed by Darin Fisher.

        Upstream V8EventListenerList for V8 bindings.
        https://bugs.webkit.org/show_bug.cgi?id=25004

        * bindings/v8/V8EventListenerList.cpp: Added.
        * bindings/v8/V8EventListenerList.h: Added.

2009-04-02  Michael Nordman  <michaeln@google.com>

        Reviewed by Darin Fisher.

        Chromium's ResourceRequest and ResourceResponse structs need some new data members.
        https://bugs.webkit.org/show_bug.cgi?id=24897

        These fields are needed to facilitate Chromium's implementation of the HTML5
        ApplicationCache feature. We need to know what frame (or context) is doing the
        requesting, and from what cache the resulting resource was retrieved.

        No change in functionality, so no tests.

        * platform/network/chromium/ResourceRequest.h:
        (WebCore::ResourceRequest::ResourceRequest):
        (WebCore::ResourceRequest::appCacheContextID):
        (WebCore::ResourceRequest::setAppCacheContextID):
        * platform/network/chromium/ResourceResponse.h:
        (WebCore::ResourceResponse::ResourceResponse):
        (WebCore::ResourceResponse::getAppCacheID):
        (WebCore::ResourceResponse::setAppCacheID):

2009-04-02  David Hyatt  <hyatt@apple.com>

        Reviewed by Darin Adler

        Fix for https://bugs.webkit.org/show_bug.cgi?id=24643.
        
        Make sure images just ignore HTTP error codes and keep loading anyway.  Only <object> checks http error codes and falls back.  Everyone
        else just ignores it and displays the image anyway.
