@@ -2,6 +2,16 @@
 
         Reviewed by Darin Fisher.
 
+        Upstream changes to V8WorkerContextEventListener for V8 bindings.
+        https://bugs.webkit.org/show_bug.cgi?id=25007
+
+        * bindings/v8/V8ObjectEventListener.h:
+        * bindings/v8/V8WorkerContextEventListener.cpp:
+
+2009-04-02  Jian Li  <jianli@chromium.org>
+
+        Reviewed by Darin Fisher.
+
         Upstream V8WorkerContextObjectEventListener for V8 bindings.
         https://bugs.webkit.org/show_bug.cgi?id=25005
 
